--- a/index.html
+++ b/index.html
@@ -1,295 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Новогодний кроссворд</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    body {
-      background: linear-gradient(135deg, #1a2a3a, #0d1b2a);
-      color: #f0f0f0;
-      padding: 20px;
-      min-height: 100vh;
-    }
-
-    .container {
-      max-width: 1000px;
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: 25px;
-    }
-
-    header {
-      text-align: center;
-      padding: 20px;
-      background: linear-gradient(90deg, #c0392b, #8e44ad, #27ae60);
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.5);
-    }
-
-    h1 {
-      font-size: 2.2rem;
-      letter-spacing: 1px;
-    }
-
-    .content {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 25px;
-      justify-content: center;
-    }
-
-    .crossword-container, .clues-container {
-      background: rgba(25, 40, 55, 0.85);
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.4);
-      border: 1px solid #2c3e50;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(11, 1fr);
-      gap: 2px;
-      background: #1a2530;
-      padding: 10px;
-      border-radius: 8px;
-    }
-
-    .cell {
-      aspect-ratio: 1;
-      background: #2c3e50;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      font-weight: bold;
-      font-size: 1.2rem;
-      text-transform: uppercase;
-      border: 1px solid #34495e;
-    }
-
-    .cell.black {
-      background: #1a2530;
-    }
-
-    .cell input {
-      width: 100%;
-      height: 100%;
-      background: transparent;
-      border: none;
-      color: #f1c40f;
-      font-size: 1.4rem;
-      font-weight: bold;
-      text-align: center;
-      outline: none;
-      text-transform: uppercase;
-    }
-
-    .cell input:focus {
-      background: rgba(241, 196, 15, 0.15);
-    }
-
-    .cell-number {
-      position: absolute;
-      top: 2px;
-      left: 2px;
-      font-size: 0.65rem;
-      color: #e74c3c;
-      font-weight: bold;
-    }
-
-    .clues-section h2 {
-      color: #27ae60;
-      margin-bottom: 12px;
-      padding-bottom: 6px;
-      border-bottom: 2px solid #c0392b;
-    }
-
-    .clue {
-      margin-bottom: 10px;
-      padding: 6px 10px;
-      background: rgba(44, 62, 80, 0.6);
-      border-radius: 6px;
-    }
-
-    .clue-number {
-      color: #f1c40f;
-      font-weight: bold;
-      margin-right: 8px;
-    }
-
-    @media (max-width: 768px) {
-      .content {
-        flex-direction: column;
-        align-items: center;
-      }
-      .grid {
-        grid-template-columns: repeat(11, 24px);
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Привет, мир!</title>
 </head>
-<body>
-  <div class="container">
-    <header>
-      <h1>🎄 Новогодний кроссворд 🎄</h1>
-    </header>
-
-    <div class="content">
-      <div class="crossword-container">
-        <div class="grid" id="grid"></div>
-      </div>
-
-      <div class="clues-container">
-        <div class="clues-section">
-          <h2>Вопросы</h2>
-          <div id="clues"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    // Слова и подсказки
-    const words = [
-      { word: "ЁЛКА", clue: "Главное новогоднее дерево" },
-      { word: "ДЕДМОРОЗ", clue: "Сказочный дедушка, приносящий подарки" },
-      { word: "СНЕГОВИК", clue: "Зимняя игрушка из снега" },
-      { word: "ХЛОПУШКА", clue: "Праздничный фейерверк в руках" },
-      { word: "МЁДОВИК", clue: "Сладкий праздничный торт (часто на Новый год)" },
-      { word: "САЛЮТ", clue: "Праздничный огненный фейерверк" },
-      { word: "НОВОГОДНИЙ", clue: "Относящийся к празднику 1 января" },
-      { word: "МАСКА", clue: "Атрибут карнавального костюма" },
-      { word: "ШАМПАНСКОЕ", clue: "Праздничный игристый напиток" },
-      { word: "ПОДАРОК", clue: "То, что ждут от Деда Мороза" }
-    ];
-
-    // Создаём пустую сетку 11x11
-    const size = 11;
-    const grid = Array(size).fill(null).map(() => Array(size).fill(null));
-    const numbering = Array(size).fill(null).map(() => Array(size).fill(0));
-    let num = 1;
-
-    // Расположение слов (вручную подобрано для пересечений)
-    const placements = [
-      { word: "НОВОГОДНИЙ", row: 0, col: 0, dir: "down" },    // 11 букв → столбец 0
-      { word: "ДЕДМОРОЗ", row: 2, col: 0, dir: "across" },    // 8 букв → строка 2
-      { word: "СНЕГОВИК", row: 4, col: 0, dir: "across" },    // 8 букв → строка 4
-      { word: "ХЛОПУШКА", row: 6, col: 0, dir: "across" },    // 8 букв → строка 6
-      { word: "МЁДОВИК", row: 8, col: 0, dir: "across" },     // 7 букв → строка 8
-      { word: "ЁЛКА", row: 0, col: 4, dir: "across" },        // 4 буквы → строка 0
-      { word: "МАСКА", row: 0, col: 8, dir: "down" },         // 5 букв → столбец 8
-      { word: "САЛЮТ", row: 0, col: 10, dir: "down" },        // 5 букв → столбец 10
-      { word: "ШАМПАНСКОЕ", row: 1, col: 2, dir: "down" },    // 11 букв → столбец 2
-      { word: "ПОДАРОК", row: 1, col: 6, dir: "down" }        // 7 букв → столбец 6
-    ];
-
-    // Заполняем сетку
-    placements.forEach(item => {
-      const { word, row, col, dir } = item;
-      // Присваиваем номер, если это начало слова
-      if (numbering[row][col] === 0) {
-        numbering[row][col] = num++;
-      }
-      for (let i = 0; i < word.length; i++) {
-        if (dir === "across") {
-          grid[row][col + i] = {
-            letter: word[i],
-            number: i === 0 ? numbering[row][col] : null
-          };
-        } else {
-          grid[row + i][col] = {
-            letter: word[i],
-            number: i === 0 ? numbering[row][col] : null
-          };
-        }
-      }
-    });
-
-    // Генерация HTML-сетки
-    const gridEl = document.getElementById("grid");
-    for (let r = 0; r < size; r++) {
-      for (let c = 0; c < size; c++) {
-        const cell = document.createElement("div");
-        if (grid[r][c] === null) {
-          cell.className = "cell black";
-        } else {
-          cell.className = "cell";
-          if (grid[r][c].number) {
-            const numSpan = document.createElement("span");
-            numSpan.className = "cell-number";
-            numSpan.textContent = grid[r][c].number;
-            cell.appendChild(numSpan);
-          }
-          const input = document.createElement("input");
-          input.type = "text";
-          input.maxLength = 1;
-          input.dataset.row = r;
-          input.dataset.col = c;
-          input.addEventListener("input", (e) => {
-            let val = e.target.value.toUpperCase();
-            if (/^[А-ЯЁ]*$/.test(val)) {
-              e.target.value = val;
-            } else {
-              e.target.value = "";
-            }
-            // Автопереход направо/вниз
-            if (val && (r < size - 1 || c < size - 1)) {
-              let next = null;
-              // Сначала пробуем направо
-              if (c < size - 1 && grid[r][c + 1] !== null) {
-                next = document.querySelector(`input[data-row="${r}"][data-col="${c + 1}"]`);
-              }
-              // Если нельзя направо — вниз
-              if (!next && r < size - 1 && grid[r + 1][c] !== null) {
-                next = document.querySelector(`input[data-row="${r + 1}"][data-col="${c}"]`);
-              }
-              if (next) next.focus();
-            }
-          });
-
-          // Навигация стрелками
-          input.addEventListener("keydown", (e) => {
-            const { key } = e;
-            let next = null;
-            if (key === "ArrowRight" && c < size - 1) {
-              next = document.querySelector(`input[data-row="${r}"][data-col="${c + 1}"]`);
-            } else if (key === "ArrowLeft" && c > 0) {
-              next = document.querySelector(`input[data-row="${r}"][data-col="${c - 1}"]`);
-            } else if (key === "ArrowDown" && r < size - 1) {
-              next = document.querySelector(`input[data-row="${r + 1}"][data-col="${c}"]`);
-            } else if (key === "ArrowUp" && r > 0) {
-              next = document.querySelector(`input[data-row="${r - 1}"][data-col="${c}"]`);
-            }
-            if (next) {
-              e.preventDefault();
-              next.focus();
-            }
-          });
-
-          cell.appendChild(input);
-        }
-        gridEl.appendChild(cell);
-      }
-    }
-
-    // Вопросы
-    const cluesEl = document.getElementById("clues");
-    words.forEach((item, i) => {
-      const div = document.createElement("div");
-      div.className = "clue";
-      div.innerHTML = `<span class="clue-number">${i + 1}.</span> ${item.clue}`;
-      cluesEl.appendChild(div);
-    });
-  </script>
-</body>
+    <a href="krossvordRU.html">Русский кроссворд</a>
+    <h1>Привет, мир!</h1>
+<a href="krossvordEN.html">Английский кроссворд</a>
 </html>
