--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Привет, мир!</title>
+    <title>мой блог</title>
 </head>
     <a href="krossvordRU.html">Русский кроссворд</a>
-    <h1>Привет, мир!</h1>
 <a href="krossvordEN.html">Английский кроссворд</a>
 </html>
