--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+<head> </title>
+    <head>
     <title>мой блог</title>
 </head>
-    <a href="krossvordRU.html">Русский кроссворд</a>
-<a href="krossvordEN.html">Английский кроссворд</a>
+    <title>моя презентация</title>
+</head>
 </html>
