--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
 </head>
     <title>моя презентация</title>
 </head>
-</html>
+<body>
+<a href="https://www.flaticon.com/ru/free-icons/-" title="новый год иконки">Новый год иконки от BZZRINCANTATION - Flaticon</a>
