--- a/index.html
+++ b/index.html
@@ -21,3 +21,19 @@
 </p>
 <a href="https://www.flaticon.com/ru/free-icons/-" title="новый год иконки">Новый год иконки от BZZRINCANTATION - Flaticon</a>
 </body>
+<body>
+19 января 2026 г.
+
+<h3>1. Ключи шифра Цезаря</h3>
+<p>а. АПЕЛЬСИН → САЦЬНВЩЮ → <strong>k = 17</strong><br>
+б. АБРИКОС → ЫЬЛГЕЙМ → <strong>k = 27</strong></p>
+
+<h3>2. Расшифровка</h3>
+<p>а. ФХНЗКЧ → при k = 5 → <strong>УСИДЕЦ</strong> (наиболее правдоподобный вариант)<br>
+б. ЦЩЕБФ → при k = 23 → <strong>ДЫРЕ</strong></p>
+
+<h3>3. Шифрование</h3>
+<p>РАСУЛОВА, k = 10:<br>
+Р(16)→Б(26), А(0)→К(10), С(17)→Ц(27), У(19)→Е(29), Л(11)→Ф(21), О(14)→Ч(24), В(2)→Л(12), А(0)→К(10)<br>
+→ <strong>БКЦЕФЧЛК</strong></p>
+</body>
