--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 б. ЦЩЕБФ → при k = 23 → <strong>ДЫРЕ</strong></p>
 
 <h3>3. Шифрование</h3>
-<p>РАСУЛОВА, k = 10:<br>
-Р(16)→Б(26), А(0)→К(10), С(17)→Ц(27), У(19)→Е(29), Л(11)→Ф(21), О(14)→Ч(24), В(2)→Л(12), А(0)→К(10)<br>
+<p>РАСУЛОВА, k = 10:
 → <strong>БКЦЕФЧЛК</strong></p>
 </body>
