--- a/index.html
+++ b/index.html
@@ -22,17 +22,24 @@
 <a href="https://www.flaticon.com/ru/free-icons/-" title="новый год иконки">Новый год иконки от BZZRINCANTATION - Flaticon</a>
 </body>
 <body>
-19 января 2026 г.
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Решение шифров Цезаря</title>
+</head>
+<body>
+<p><strong>Дата:</strong> 19 января 2026 г.</p>
 
 <h3>1. Ключи шифра Цезаря</h3>
-<p>а. АПЕЛЬСИН → САЦЬНВЩЮ → <strong>k = 17</strong><br>
-б. АБРИКОС → ЫЬЛГЕЙМ → <strong>k = 27</strong></p>
+<p>а. АПЕЛЬСИН → САЦЬНВЩЮ → ключ <strong>k = 17</strong></p>
+<p>б. АБРИКОС → ЫЬЛГЕЙМ → ключ <strong>k = 27</strong></p>
 
 <h3>2. Расшифровка</h3>
-<p>а. ФХНЗКЧ → при k = 5 → <strong>УСИДЕЦ</strong> (наиболее правдоподобный вариант)<br>
-б. ЦЩЕБФ → при k = 23 → <strong>ДЫРЕ</strong></p>
+<p>а. ФХНЗКЧ → <strong>ПРИВЕТ</strong> (k = 5)</p>
+<p>б. ЦЩЕБФ → <strong>ВЕСНА</strong> (k = 20)</p>
 
 <h3>3. Шифрование</h3>
-<p>РАСУЛОВА, k = 10:
-→ <strong>БКЦЕФЧЛК</strong></p>
+<p>РАСУЛОВА (k = 10) → <strong>БКИЕЪЧКК</strong></p>
 </body>
+</html>
