--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
     <title>Решение шифров Цезаря</title>
 </head>
     <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<body style="background:linear-gradient(45deg,#ff0000,#ff7f00,#ffff00,#00ff00,#0000ff,#4b0082,#9400d3);margin:0;height:100vh">
+<body style="background:#4CAF50;margin:0;height:100vh">
 <p>19 января 2026 г.</p>
 </body>
+</html>
 </html>
 <body>
 <p><strong>Дата:</strong> 19 января 2026 г.</p>
